--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
 
                 var body = document.getElementsByTagName("body")[0];
                 body.appendChild(vertDiv);
-                
+
          }
          }
      //------------------------------------------------------------------------------------------
@@ -147,7 +147,7 @@
 
 <body onload="makeVerticalDivs(); makeHorizontalDivs()">
     <!-- menu divs -->
-<div class="menuDiv"  id="worksDiv"; ><a class="menuLink"; href="works.html">works</a></div><br>
+<div class="menuDiv"  id="worksDiv"; ><a class="menuLink"; href="works.html">projects</a></div><br>
 <div class="menuDiv" id="contactDiv"; ><a class="menuLink";  href="contact.html">contact</a></div><br>
 <div class="menuDiv" id="bioDiv"; ><a class="menuLink"; href="bio.html">bio</a></div><br>
 <div class="menuDiv" id="homeDiv"; ><a class="menuLink"; href="home.html">home</a></div><br>
