--- a/rnn/rnn_demo.html
+++ b/rnn/rnn_demo.html
@@ -173,7 +173,7 @@
             </audio>
         </div>
         <div id="rnn_image_div">
-          <object id="overview" data="overview.svg" type="image/svg+xml"></object>
+          <object id="overview" data="images/overview.svg" type="image/svg+xml"></object>
         </div>
         <div class="right_floating_div" id="output_audio_div">
             <br>
@@ -193,7 +193,7 @@
     <div class="half_size left_floating_div" id="lstm_image_div">
         <!-- <svg id="svg" shape-rendering="geometricPrecision">
         </svg> -->
-        <object id="lstm_drawing" width='100%' data="lstm_drawing.svg" type="image/svg+xml"></object>
+        <object id="lstm_drawing" width='100%' data="images/lstm_drawing.svg" type="image/svg+xml"></object>
         <!-- <img id="lstm_image" src=lstm.png> -->
     </div>
     <div class="half_size right_floating_div" id="overview_text_div">
@@ -239,7 +239,7 @@ for each time step:
     </div>
     <div class="right_floating_div half_size" id="training_image_div"><br>
       <!-- <img  src="training_futura.png"></div> -->
-      <object id="training" width="100%" data="updated_training.svg" type="image/svg+xml"></object>
+      <object id="training" width="100%" data="images/updated_training.svg" type="image/svg+xml"></object>
     </div>
 </div>
 
@@ -248,7 +248,7 @@ for each time step:
 <div class="containing_div" id="sampling_cont">
     <div class="half_size left_floating_div" id="sampling_image_div">
         <!-- <img id="sampling_image" src="generation_futura.png"> -->
-        <object id="sampling" width="100%" data="updated_sampling_drawing.svg" type="image/svg+xml"></object>
+        <object id="sampling" width="100%" data="images/updated_sampling_drawing.svg" type="image/svg+xml"></object>
     </div>
 
     <div class="half_size right_floating_div" id="sampling_text_div"><br>
@@ -349,7 +349,7 @@ for each epoch:
     </div>
     <div class="half_size right_floating_div" id="vector_image_div">
         <!-- <img src="vector_image.png" width="80%" id="vector_image"> -->
-        <object id="vector_data" width="100%" data="vector_data.svg" type="image/svg+xml"></object>
+        <object id="vector_data" width="100%" data="images/vector_data.svg" type="image/svg+xml"></object>
 
 
     </div>
@@ -416,7 +416,7 @@ for each epoch:
     <div class="half_size right_floating_div" id="magnitude_spectrum_image_div">
         <br><br>
         <!-- <img src="vector_image.png" id="magnitude_spectrum_image"> -->
-        <object id="magnitude_data" width="100%" data="vector_data.svg" type="image/svg+xml"></object>
+        <object id="magnitude_data" width="100%" data="images/vector_data.svg" type="image/svg+xml"></object>
 
     </div>
 </div>
@@ -428,7 +428,7 @@ for each epoch:
     <br>
     <p class="centered_text">VOCODER DESIGN</p>
     <div id="vocoder_image_div">
-      <object id="vocoder" width="100%" data="vocoder.svg" type="image/svg+xml"></object>
+      <object id="vocoder" width="100%" data="images/vocoder.svg" type="image/svg+xml"></object>
     </div>
 </div>
 <hr>
@@ -495,7 +495,7 @@ for each epoch:
     </div>
     <div class="half_size right_floating_div">
         <!-- <img src="transpose.png" id="transpose_image"> -->
-        <object id="transpose_data" width="100%" data="transpose_data.svg" type="image/svg+xml"></object>
+        <object id="transpose_data" width="100%" data="images/transpose_data.svg" type="image/svg+xml"></object>
 
     </div>
 </div>
@@ -538,7 +538,7 @@ for each epoch:
     </div>
         <div class="half_size right_floating_div">
             <!-- <img src="column_vector.png" id="column_vector_image"> -->
-            <object id="column_data" width="100%" data="column_data.svg" type="image/svg+xml"></object>
+            <object id="column_data" width="100%" data="images/column_data.svg" type="image/svg+xml"></object>
 
         </div>
 </div>
