add coming soon message

--- a/rnn/rnn_demo.html
+++ b/rnn/rnn_demo.html
@@ -31,6 +31,7 @@ ga('send', 'pageview');
         <li>how these models can be <span class="sampled_output_word">sampled</span> from to create new sequences of audio</li>
         <li>four concrete approaches to sampling from an LSTM with audio examples</li>
     </ul>
+    <p>Code and musical examples coming soon!</p>
 <!-- </div> -->
 
 
